                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 21-04-2006 changed: progress dialog update() python method can now update the dialog text, thanks to Donno.
 - 21-04-2006 fixed: [ 1470736 ] Kai game launch problems.
 - 21-04-2006 added: Indonesian language file (Thnx to djoens)
 - 21-04-2006 updated: Swedish language file (Thnx to blittan)
 - 21-04-2006 updated: Norwegian language file (Thnx to vnm)
 - 21-04-2006 fixed: [ 1473159 ] Big size font subtitles long time play error.
 - 21-04-2006 fixed: [ 1473940 ] ControlLabel don't always display
 - 21-04-2006 fixed: [ 1459126 ] LogPath XML Setting Not Respected.
 - 21-04-2006 fixed: SetHeading method in python keyboard wasn't working.  Thanks to Nuka1195.
 - 21-04-2006 added: Support for unswizzled 32 bit textures in Textures.xpr
 - 20-04-2006 fixed: some dvd's would display a completly white overlay over almost whole screen, or very odd overlays
 - 20-04-2006 fixed: if an invalid audio/sub stream was selected from dvdmenu, wrong stream would be indicated from osd. 
                     too many audio/sub streams would be shown in osd
 - 20-04-2006 fixed: audio/video sync would be of if syncing of fields was enabled. extremly so on 30fps movies if pal60 wasn't allowed.
 - 20-04-2006 changed: Altered the way skin labels containing $INFO and $LOCALIZE are parsed, so that they render faster, and you can better indicate which parts of the string should not render if a particular piece of $INFO is empty. More information is available in the online manual.
 - 20-04-2006 fixed: Queuing of music folders that contained playlist files referencing the files in the same folder meant they were added more than once.